dynamic height vh

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         margin: 0;
         overflow: hidden;
         /* width: 100%; */
-        height: 100vh;
+        height: 100dvh;
     }
 
     .main {
@@ -997,3 +997,4 @@
 
 </script>
 </html>
+
